[tool.poetry]
name = "solution"
version = "0.1.0"
description = "Solutions to common programming problems"
authors = ["Dr. Nobel Khandaker <nobel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
sure = "^2.0.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
